--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <meta name="viewport" content="user-scalable = yes" /> -->
+    <meta name="viewport" content="width=device-width, scale=1.0" />
+    <!-- <meta name="viewport" /> -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
